2010-01-20  Daniel Bates  <dbates@webkit.org>

        Unreviewed. Add failing test fast/css/button-height.html
        to GTK Skipped file as we need to look into this.
        See bug #33936 for more details.

        * platform/gtk/Skipped:

2010-01-20  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Alexey Proskuryakov.

        WebSocket: Request-URI should not be empty when no tralling slash in host
        https://bugs.webkit.org/show_bug.cgi?id=33689

        * websocket/tests/handler_map.txt: Added.
          use websocket/tests/echo-location_wsh.py to handle request for
          ws://127.0.0.1:8880
        * websocket/tests/script-tests/url-no-trailing-slash.js: Added.
        * websocket/tests/url-no-trailing-slash-expected.txt: Added.
        * websocket/tests/url-no-trailing-slash.html: Added.

2010-01-20  Daniel Bates  <dbates@webkit.org>

        Reviewed by Tor Arne Vestbø.

        https://bugs.webkit.org/show_bug.cgi?id=29564
        
        Tests that the user-specified height for <button>- and <input type="button">-
        elements are honored, if appropriate for the platform and context.

        * fast/css/button-height-expected.txt: Added.
        * fast/css/button-height.html: Added.

2010-01-20  Brady Eidson  <beidson@apple.com>

        Reviewed by Sam Weinig.

        Crash in Page::backForwardList when using History object from a detached window
        <rdar://problem/7556252> and https://bugs.webkit.org/show_bug.cgi?id=33828

        * fast/loader/stateobjects/state-api-on-detached-frame-crash-expected.txt: Added.
        * fast/loader/stateobjects/state-api-on-detached-frame-crash.html: Added.

2010-01-20  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=33930
        Crash in JSDOMWindowBase::crossDomainAccessErrorMessage when accessing a detached sandboxed frame

        * http/tests/security/detached-sandboxed-frame-access-expected.txt: Added.